--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-
+<svg id="bear" width="256" height="256" viewBox="0 0 256 256">
+  <g id="ears">
+    <g id="left-ear">
 
 </body>
 </html>
