--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 <svg id="bear" width="256" height="256" viewBox="0 0 256 256">
   <g id="ears">
     <g id="left-ear">
+      <circle id="left-ear-outside" cx="43.9" cy="49.2" r="34.6" fill="#673200"/>
+      <circle id="left-ear-pink" cx="46.4" cy="58" r="14" fill="#ffaaca"/>
+    </g>
+    <g id="right-ear">
+      <circle id="right-ear-outside" cx="212.1" cy="49.2" r="34.6" fill="#673200"/>
+      <circle id="right-pink" cx="209.6" cy="58" r="14.8" fill="#ffaaca"/>
+    </g>
+  </g>
+    <g id="face">
+      <g id="bear-head">
+        <circle id="head" cx="128" cy="133.2" r="108.1" fill="#673200"/>
+        <circle id="muzzle" cx="128" cy="172.7" r="42.3" fill="#c65b00"/>
+        <path id="spot2" fill="#c65b00" d="M174 35.4a65.6 65.6 0 0 0 61 113.3 108.2 108.2 0 0 0-61-113.3z"/>
+        <path id="spot" fill="#c65b00" d="M19.9 133.2a109 109 0 0 0 1.1 15.4A65.6 65.6 0 0 0 82 35.4a108.1 108.1 0 0 0-62.1 97.8z"/>
+        <path id="mouth" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M101.2 187.1a37.2 37.2 0 0 0 52.7 0"/>
+        <circle id="nose" cx="128" cy="138.1" r="13" fill="#ffaaca"/>
+      </g>
+      </g>
+
 
 </body>
 </html>
