added all index

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         <path id="mouth" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M101.2 187.1a37.2 37.2 0 0 0 52.7 0"/>
         <circle id="nose" cx="128" cy="138.1" r="13" fill="#ffaaca"/>
       </g>
-      </g>
-
+    </g>
+    <g id="eyes">
+      <circle id="left-eye" cx="84.8" cy="106" r="9"/>
+      <circle id="right-eye" cx="171.2" cy="106" r="9"/>
+    </g>
+  </svg>
 
 </body>
 </html>
